--- a/pages/SimpleForm.html
+++ b/pages/SimpleForm.html
@@ -21,6 +21,7 @@
             <div>
                 <label for="email">email input type:</label>
                 <input type="email" id="email" name="email">
+                <error-output class="email-error" for="email"></error-output>
             </div>
             <div>
                 <label for="url">url input type:</label>
@@ -56,12 +57,22 @@
             const text=document.querySelector('#text');//text is the id to be searched. if many ids then an array will be returned.
             const textError=document.querySelector('.text-error');//test-error is the class to be searched. if many classes, then an array will be returned
             text.addEventListener('input', function(){
-                let namRegex= new RegExp(/^[A-Z][a-z]{2,}$/);
-                if(namRegex.test(text.value))
+                let nameRegex= new RegExp(/^[A-Z][a-z]{2,}$/);
+                if(nameRegex.test(text.value))
                     textError.textContent="";
                 else
                     textError.textContent="Name is incorrect";
             })
+
+            const email=document.querySelector('#email');
+            const emailError=document.querySelector('.email-error');
+            email.addEventListener('input', function(){
+            let emailRegex= new RegExp(/^[a-zA-z0-9]+([-.+_][a-zA-Z0-9]+)*[@][a-zA-z0-9]+([.][a-zA-z]{2,}){1,2}$/);
+            if(emailRegex.test(email.value))
+            emailError.textContent="";
+            else
+            emailError.textContent="Email is incorrect";
+         })
 
             const salary=document.querySelector('#salary');
             const output=document.querySelector('.salary-output');
