--- a/pages/SimpleForm.html
+++ b/pages/SimpleForm.html
@@ -17,6 +17,7 @@
             <div>
                 <label for="pwd">Password input type: </label>
                 <input type="password" id="pwd" name="pwd" required>
+                <error-output class="password-error" for="pwd"></error-output>
             </div>
             <div>
                 <label for="email">email input type:</label>
@@ -83,6 +84,16 @@
                     telError.textContent="";
                 else
                     telError.textContent="Incorrect Mobile Number";
+            })
+
+            const password=document.querySelector("#pwd");
+            const passwordError =document.querySelector('.password-error');
+            password.addEventListener('input', function(){
+                let passwordRegex=new RegExp(/^[a-zA-Z0-9.+*&^%$#@!]{8,}$/);
+                if(passwordRegex.test(password.value))
+                    passwordError.textContent="";
+                else
+                    passwordError.textContent="Invalid Passowrd";
             })
 
             const salary=document.querySelector('#salary');
