--- a/pages/SimpleForm.html
+++ b/pages/SimpleForm.html
@@ -89,7 +89,7 @@
             const password=document.querySelector("#pwd");
             const passwordError =document.querySelector('.password-error');
             password.addEventListener('input', function(){
-                let passwordRegex=new RegExp(/^[a-zA-Z0-9.+*&^%$#@!]{8,}$/);
+                let passwordRegex=new RegExp(/((?=.*[A-Z])(?=.*[0-9])(?=^[a-zA-Z0-9]*[!@#$%^&*-+_][a-zA-Z0-9]*$)).{8,}/);
                 if(passwordRegex.test(password.value))
                     passwordError.textContent="";
                 else
